Fix vertical alignment in `.image-wrapped`

--- a/mixins/image-wrapped.less
+++ b/mixins/image-wrapped.less
@@ -90,6 +90,9 @@
 			// for proper vertical alignment with small images
 			font-size: 0;
 			line-height: 0;
+		}
+
+		.img-content {
 
 			&::before {
 				content: '';
